fixing general overflow 6

--- a/src/css/style-general.css
+++ b/src/css/style-general.css
@@ -24,6 +24,7 @@ body {
   line-height: 1.5;
   width: 100%;
   overflow-x: auto;
+  max-width: 100%;
 }
 
 #banner {
